@@ -71,6 +71,15 @@ download_area([center_wgs84[0] - size_km * km, center_wgs84[1] - size_km * km,
                name=name)
 
 # Converted using:
-# find /tmp -maxdepth 1 -name '*.osm' -exec sh -c './osmtogeojson {} > /tmp/$( basename {} ).geojson' \;
-# find ~/git/ddd/private/data/oms/salamanca -maxdepth 1 -name '*.osm' -exec sh -c './osmtogeojson {} > /tmp/$( basename {} ).geojson' \;
+#   find /tmp -maxdepth 1 -name '*.osm' -exec sh -c './osmtogeojson {} > /tmp/$( basename {} ).geojson' \;
+#   find ~/git/ddd/private/data/oms/salamanca -maxdepth 1 -name '*.osm' -exec sh -c './osmtogeojson {} > /tmp/$( basename {} ).geojson' \;
+
+# Merged using osmium:
+# The first file needs to be copied to res.osm first.
+# If the process breaks, the file res2.osm above needs to be deleted.
+#   for a in *.osm ; do osmium merge res.osm $a --overwrite -o res2.osm ; cp res2.osm res.osm ; done
+
+# Finally using PBFs:
+#   osmconvert spain-latest.osm.pbf -b=-5.870,40.760,-5.470,41.160 -o=salamanca-latest.osm.pbf
+
 
